--- a/index.html
+++ b/index.html
@@ -12,51 +12,82 @@
     <!-- Feather Icon Script -->
     <script src="https://unpkg.com/feather-icons"></script>
     <!-- /Feather Icon Script -->
-    
+
     <!-- Tambahan Style -->
     <style>
-        #logo {
-            font-size: large;
-            font-weight: 700;
-            color: #fff2f2;
-            font-style: italic;
-        }
+      #logo {
+        font-size: x-large;
+        font-weight: 700;
+        color: #fff2f2;
+        font-style: italic;
+      }
 
-        #J {
-            font-size: x-large;
-            color:#44f19d;
-            margin-right: 0px;
-        }
+      #J {
+        font-size: xx-large;
+        color: #44f19d;
+        margin-right: 0px;
+      }
 
-        footer div a::after {
-            content: "";
-            display:block;
-            padding-bottom: 0.5rem;
-            border-bottom: 0.1rem solid black;
-            transform: scaleX(0);
-        }
+      /* Adjusting the icon size */
+      .dropdown-icon {
+        width: 16px;
+        height: 16px;
+        transition: transform 0.4s ease;
+      }
 
-        footer div a:hover::after{
-            transform: scaleX(0.8);
-            transition: 0.4s linear;
-        }
+      .dropdown:hover .dropdown-icon {
+        transform: rotate(180deg);
+      }
 
-        footer div a:hover {
-            color: #93CAED;
-        }
+      footer div a::after {
+        content: "";
+        display: block;
+        padding-bottom: 0.5rem;
+        border-bottom: 0.1rem solid black;
+        transform: scaleX(0);
+      }
+
+      footer div a:hover::after {
+        transform: scaleX(0.8);
+        transition: 0.4s linear;
+      }
+
+      footer div a:hover {
+        color: #93caed;
+      }
     </style>
-
   </head>
   <!-- Landing page -->
   <body class="bg-blue-100">
     <!-- Navbar -->
     <nav>
       <div class="navbar bg-neutral">
-        <div class="flex-1 justify-center">
-          <a id="logo" class="btn btn-ghost normal-case text-2xl" href="index.html"><span id="J">J</span>Creative</a>
-          <!-- <button class="btn btn-outline btn-white">JCreative</button> -->
+        <!-- <div class="flex-1"> -->
+        <div class="navbar-start ml-5 p-1">
+          <a id="logo" class="btn btn-ghost normal-case" href="index.html"><span id="J" class="">J</span>Creative</a>
         </div>
+        <!-- <button class="btn btn-outline btn-white">JCreative</button> -->
+        <div class="navbar-end mr-5 pr-5 pt-1 pb-1">
+          <a href="#" class="btn btn-ghost join-item normal-case">Home</a>
+          <div class="dropdown dropdown-hover">
+            <!-- <a href="#" class="btn btn-ghost join-item normal-case">Services</a> -->
+            <div tabindex="0" role="button" class="btn btn-ghost join-item normal-case">
+              Services
+              <i data-feather="chevron-down" class="dropdown-icon"></i>
+            </div>
+            <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a href="">Social Media Marketing</a></li>
+              <li><a href="">Brand and Visual Design</a></li>
+              <li><a href="">SEO Optimization</a></li>
+              <li><a href="">Strategy and Creative Assets</a></li>
+              <li><a href="">Digital Marketing</a></li>
+              <li><a href="">Web and Mobile Apps</a></li>
+            </ul>
+          </div>
+          <a href="https://ceee17.github.io/j-creative-agency/#client" class="btn btn-ghost join-item normal-case">Clients</a>
+          <a href="https://ceee17.github.io/j-creative-agency/#about" class="btn btn-ghost join-item normal-case">About Us</a>
         </div>
+        <!-- </div> -->
       </div>
     </nav>
     <!-- /navbar -->
@@ -68,9 +99,10 @@
         <div class="hero-content text-center text-neutral-content">
           <div class="max-w-md">
             <h1 class="mb-5 text-8xl font-bold">¡Hola!</h1>
-            <p class="mb-5 text-xl">Looking for Creative Team? Yeap, you are in the right place!</p>
+            <div class="divider divider-info"></div>
+            <p class="mb-5 text-xl">Looking for Creative Agency? Yeap, you are in the right place!</p>
             <!-- <button id="cta" class="btn btn-outline btn-info">DISCOVER NOW <span style="font-size: 22px;">&#8594;</span></button> -->
-            <a class="btn btn-outline btn-info" href="https://ceee17.github.io/j-creative-agency/">DISCOVER NOW <span style="font-size: 22px;">&#8594;</span></a>
+            <a class="btn btn-outline btn-info" href="https://ceee17.github.io/j-creative-agency/">DISCOVER NOW <span style="font-size: 22px">&#8594;</span></a>
           </div>
         </div>
       </div>
@@ -85,7 +117,7 @@
             d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"
           ></path>
         </svg>
-        <p>Copyright © 2023 - All right reserved</p>
+        <p>Created By Jessen Chayadi ^_^ | © 2024.</p>
       </div>
       <div class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
         <a href="https://www.instagram.com/jcccc.17/"><i data-feather="instagram"></i></a>
@@ -96,7 +128,17 @@
     </footer>
     <!-- /Footer -->
     <script>
-        feather.replace()
+      feather.replace();
     </script>
+    <!-- <script>
+      function toggleDropdown(element) {
+        element.classList.toggle("dropdown-active");
+        feather.replace(); // Re-initialize feather icons
+      }
+
+      document.addEventListener("DOMContentLoaded", function () {
+        feather.replace(); // Initial feather icons replacement
+      });
+    </script> -->
   </body>
 </html>
