--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <body class="bg-blue-100">
     <!-- Navbar -->
     <nav>
-      <div class="navbar bg-neutral">
+      <div class="navbar bg-base-200">
         <!-- <div class="flex-1"> -->
         <div class="navbar-start ml-5 p-1">
           <a id="logo" class="btn btn-ghost normal-case" href="index.html"><span id="J" class="">J</span>Creative</a>
@@ -110,7 +110,7 @@
     <!-- /Hero Section -->
 
     <!-- Footer -->
-    <footer class="footer items-center p-4 bg-neutral text-neutral-content">
+    <footer class="footer items-center p-4 bg-base-200 text-neutral-content">
       <div class="items-center grid-flow-col">
         <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="fill-current">
           <path
